fix: OrderInputView 메시지 제대로 안된 거 수정
- ArrayList에서 getfirst, getlast로 인한 에러