@@ -1,25 +1,29 @@
 package store.view;
 
 import store.error.ErrorMessages;
+import store.service.ProductService;
+import store.service.SetupService;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public class OrderInputView extends InputView {
+    ProductService productService = SetupService.load();
+
     @Override
     public void validate(String input) {
         String[] splitedInput = input.split(",");
-
+        if (input.isEmpty()) {
+            throw new IllegalArgumentException(ErrorMessages.NOT_VALID_FORMAT.getMessage());
+        }
         for (String text: splitedInput) {
             hasBrackets(text);
             validStock(text);
         }
-
     }
 
     private void hasBrackets(String text) {
-        if (text.charAt(0) != '[' || text.charAt(text.length()) != ']') {
+        if (text.charAt(0) != '[' || text.charAt(text.length() - 1) != ']') {
             throw new IllegalArgumentException(ErrorMessages.NOT_VALID_FORMAT.getMessage());
         }
     }
@@ -27,19 +31,39 @@ public class OrderInputView extends InputView {
     private void validStock(String text) {
         String trimmedText = text.substring(1, text.length() - 1); // 양쪽에 있는 "[", "]" 제거
         List<String> hyphenSplited =  Arrays.asList(trimmedText.split("-"));
-        String productName = hyphenSplited.getFirst();
-        String quantity = hyphenSplited.getLast();
+        String productName = hyphenSplited.get(0);
+        String quantity = hyphenSplited.get(1);
+
         validProductName(productName);
-        validQuantity(quantity);
+        validQuantity(productName, quantity);
 
     }
 
-    private boolean validProductName(String productName) {
-        return true;
+    private void validProductName(String productName) {
+        List<String> keys = productService.getKeyAboutProduct(productName);
+        if (keys.isEmpty()) {
+            throw new IllegalArgumentException(ErrorMessages.PRODUCT_NOT_FOUND.getMessage());
+        }
     }
 
-    private boolean validQuantity(String quantity) {
-        return true;
+    private void validQuantity(String productName, String quantity) {
+        int quantityInt;
+        try{
+            quantityInt = Integer.parseInt(quantity);
+        }catch (NumberFormatException e) {
+            throw new IllegalArgumentException(ErrorMessages.NOT_VALID_FORMAT.getMessage());
+        }
+        List<String> keys = productService.getKeyAboutProduct(productName);
+        checkQuantity(keys, quantityInt);
     }
 
+    private void checkQuantity(List<String> keys, int quantityInt) {
+        int sum = 0;
+        for (String key: keys) {
+            sum +=productService.findProductByKey(key).getQuantity();
+        }
+        if (sum < quantityInt) {
+            throw new IllegalArgumentException(ErrorMessages.EXCEEDS_STOCK_QUANTITY.getMessage());
+        }
+    }
 }
